# kazarr

./: .dockerignore  .gitignore  Dockerfile  README.md  dockerfile  main.py  pyproject.toml  sonar-project.properties
.github/workflows/: main.yml
conversion_tool/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
conversion_tool/examples/: template.json  template.jsonc
conversion_tool/kazarr/: __init__.py  api.py  cli.py  pipelines.py  processes.py  utils.py
conversion_tool/src/: pipelines.py  processes.py  utils.py
mcp/: README.md  package-lock.json  package.json  server.js
mcp/test/: server.test.js
scripts/: build_conversion_tool.sh  build_service.sh  init_runner.sh  kash_python.sh  run_tests.sh  setup_workspace.sh  test-environment.yml
src/: api.py  exceptions.py  handlers.py  utils.py
src/api/: api.py
src/api/routers/: dataset.py  extract.py  isoline.py  mesh.py  probe.py  select.py
src/processing/: bbox.py  contexts.py  interpolation.py  isoline.py  output.py
src/schemas/: config.py  requests.py
src/services/: dataset.py  extraction.py  isoline.py  mesh.py
src/utils/: data.py  file.py  logging.py  requests.py  spatial.py
test/: conftest.py  test_3d.py  test_combine_datasets.py  test_compare_grids.py  test_custom_eccodes.py  test_general.py  test_main.py  test_point_list.py  test_radial_grid.py  test_rectilinear_grid.py  test_regular_grid.py  utils.py
test/samples/: 3d_grid.nc  radial_grid.nc  radial_mesh_resize1.nc  radial_mesh_resize2.nc  rectilinear_grid.nc
test/samples/custom_eccodes/grib2/localConcepts/lfpw/: name.def  (+3 more)
